--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "lib": [
       "dom",
       "dom.iterable",
@@ -17,13 +17,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
-    "baseUrl": "./src",
-    "paths": {
-      "@Fetches/*": ["Fetches/*"],
-      "@Components/*": ["Components/*"],
-      "@Types/*": ["Types/*"]
-    },
+    "jsx": "react"
   },
   "include": [
     "src"
